--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -28,6 +28,7 @@
               <li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>
               <li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
               <li><a routerLink="/discount">{{ 'header.discount' | translate }}</a></li>
+              <li><a (click)="openDSus()">диалог success</a></li>
             </ul>
           </li>
         </ul>
