--- a/src/app/fees-discount/fees-discount.component.html
+++ b/src/app/fees-discount/fees-discount.component.html
@@ -6,8 +6,7 @@
 
 
       <div class="sub-title">
-        <p class="p_large pre-line">Poplatky a slevy přehledně, v jedné tabulce.
-          V případě dotazů se obraťte na technickou podporu.</p>
+        <p class="p_large pre-line">{{ 'fees-discounts.sub-head' | translate }}</p>
       </div>
     </header>
 
