--- a/src/app/prepaid-card/prepaid-card.component.html
+++ b/src/app/prepaid-card/prepaid-card.component.html
@@ -6,8 +6,9 @@
         <div class="title"><h1 class="h1">Prepaid Card</h1></div>
 
         <div class="sub-title">
-          <p class="p_large pre-line">S předplacenou kartou získáté široké množství výhod.
-            A pozor, to bez závazků!</p>
+          <p class="p_large pre-line">
+            {{ 'prepaid-card.sub-head' | translate }}
+          </p>
         </div>
 
       </header>
@@ -59,7 +60,7 @@
                 <div class="head__icon">
                   <div class="ic-card"></div>
                 </div>
-                <h2 class="h2">Máme 5 slevových úrovní</h2>
+                <h2 class="h2 pre-line"> {{ 'prepaid-card.title' | translate }}</h2>
               </div>
 
               <a href="#" class="btn btn-accentSecond rippler rippler-default ">Order a card</a>
