--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -689,7 +689,7 @@
 
                     <!-- STEP 4 -->
                     <div class="step">
-                      <div class="step-title"><h3 class="h3">4. Celkový přehled směny</h3></div>
+                      <div class="step-title"><h3 class="h3">4. {{ 'process4.title' | translate }}</h3></div>
 
                       <div class="reduced-width">
                         <div class="switch">
@@ -715,33 +715,33 @@
                       </div>
 
                       <div class="exchange-info">
-                        <div class="line-sides">převod</div>
+                        <div class="line-sides">{{ 'process4.transfer' | translate }}</div>
 
                         <table class="exchange-info__direction">
                           <tr>
                             <td>
-                              <span>Vstupní systém:</span>
+                              <span>{{ 'process4.input-system' | translate }}</span>
                               <b>Adv Cash</b>
                             </td>
                             <td align="right">
-                              <span>Částka:</span>
+                              <span>{{ 'process4.amount' | translate }}</span>
                               <b><strong>26,960</strong> USD</b>
                             </td>
                           </tr>
 
                           <tr>
                             <td>
-                              <span>Výstupní sytém:</span>
+                              <span>{{ 'process4.output-system' | translate }}</span>
                               <b>Bitcoin</b>
                             </td>
                             <td align="right">
-                              <span>Částka:</span>
+                              <span>{{ 'process4.amount' | translate }}</span>
                               <b><strong>0.08040</strong>BTC</b>
                             </td>
                           </tr>
                         </table>
 
-                        <div class="line-sides">osobní údaje</div>
+                        <div class="line-sides">{{ 'process4.personal-information' | translate }}</div>
 
                         <div class="exchange-info__descr">
                           <div class="item">
@@ -750,7 +750,7 @@
                           </div>
 
                           <div class="item">
-                            <span>Jméno a příjmení:</span>
+                            <span>{{ 'process4.first-name' | translate }}</span>
                             <b>John Doe</b>
                           </div>
 
@@ -774,14 +774,14 @@
 
                     <!-- STEP 5 -->
                     <div class="step">
-                      <div class="step-title"><h3 class="h3">5. Poslání peněz - SEPA</h3></div>
+                      <div class="step-title"><h3 class="h3">5. {{ 'process5.title-sepa' | translate }}</h3></div>
 
-                      <p class="p_small">
-                        <b>Pošlete</b> částku na uvedený <b>bankovní účet</b>. Dbejte na <b>potvrzení</b> odeslání až v momentu, kdy budou finance <b>skutečně odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.sub-title' | translate">
+                        <!--<b>Pošlete</b> částku na uvedený <b>bankovní účet</b>. Dbejte na <b>potvrzení</b> odeslání až v momentu, kdy budou finance <b>skutečně odeslány</b>.-->
                       </p>
 
                       <div class="exchange-info">
-                        <div class="line-sides">posílaná částka</div>
+                        <div class="line-sides">{{ 'process5.amount-transfer' | translate }}</div>
 
                         <div class="select-amount">
                           <label class="input-exchange">
@@ -799,16 +799,16 @@
                         </div>
 
 
-                        <div class="line-sides">platební údaje</div>
+                        <div class="line-sides">{{ 'process5.payment-information' | translate }}</div>
 
                         <div class="exchange-info__descr">
                           <div class="item">
-                            <span>YDržitele účtu:</span>
+                            <span>{{ 'process5.bank-holder' | translate }}</span>
                             <b>Společnost, s.r.o.</b>
                           </div>
 
                           <div class="item">
-                            <span>Adresa majitele účtu:</span>
+                            <span>{{ 'process5.bank-holder-address' | translate }}</span>
                             <b>Příčná ulice 12/845 <br>100 00 Bradavice 16</b>
                           </div>
 
@@ -823,12 +823,12 @@
                           </div>
 
                           <div class="item">
-                            <span>Název banky:</span>
+                            <span>{{ 'process5.bank-name' | translate }}</span>
                             <b>Moneta Money Bank, a.s.</b>
                           </div>
 
                           <div class="item">
-                            <span>Adresa banky:</span>
+                            <span>{{ 'process5.bank-address' | translate }}</span>
                             <b>Hitlerstrasse 1/422 <br>100 00 Deutchland 4</b>
                           </div>
                         </div>
@@ -836,10 +836,11 @@
 
                       <hr>
 
-                      <p class="p_small">
-                        Pokud nedodržíte platební instrukce, <br>transakce může trvat déle.
-                        Na tlačítko <b class="accentColor">“Peníze odeslány”</b> klikněte <br>
-                        až v momentu, co budou peníze <b class="redColor">opravdu odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.info-instruction' | translate">
+                        <!--Pokud nedodržíte platební instrukce, <br>transakce může trvat déle.-->
+                        <!--Na tlačítko <b class="accentColor">“Peníze odeslány”</b> klikněte <br>-->
+                        <!--až v momentu, co budou peníze <b class="redColor">opravdu odeslány</b>.-->
+
                       </p>
 
                       <a href="#" class="btn btn-accent rippler rippler-default full-width">Money sent</a>
@@ -847,14 +848,14 @@
 
                     <!-- STEP 5-1 -->
                     <div class="step">
-                      <div class="step-title"><h3 class="h3">5. Poslání peněz - CZ účet</h3></div>
+                      <div class="step-title"><h3 class="h3">5. {{ 'process5.title-account' | translate }}</h3></div>
 
-                      <p class="p_small">
-                        <b>Pošlete</b> částku na uvedený <b>bankovní účet</b>. Dbejte na <b>potvrzení</b> odeslání až v momentu, kdy budou finance <b>skutečně odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.sub-title' | translate">
+                        <!--<b>Pošlete</b> částku na uvedený <b>bankovní účet</b>. Dbejte na <b>potvrzení</b> odeslání až v momentu, kdy budou finance <b>skutečně odeslány</b>.-->
                       </p>
 
                       <div class="exchange-info">
-                        <div class="line-sides">posílaná částka</div>
+                        <div class="line-sides">{{ 'process5.amount-transfer' | translate }}</div>
 
                         <div class="select-amount">
                           <label class="input-exchange">
@@ -871,39 +872,36 @@
                           </label>
                         </div>
 
-                        <div class="line-sides">platební údaje</div>
+                        <div class="line-sides">{{ 'process5.payment-information' | translate }}</div>
                       </div>
 
                       <table class="exchange-info__direction">
                         <tr>
                           <td>
-                            <span>Držitele účtu:</span>
+                            <span>{{ 'process5.bank-holder' | translate }}</span>
                             <b><strong>Společnost, s.r.o.</strong></b>
                           </td>
                         </tr>
                         <tr>
                           <td>
-                            <span>Číslo účtu:</span>
+                            <span>{{ 'process5.bank-number' | translate }}</span>
                             <b><strong>1112003761</strong></b>
                           </td>
                           <td>
-                            <span>Kód banky:</span>
+                            <span>{{ 'process5.bank-code' | translate }}</span>
                             <b><strong>0600</strong></b>
                           </td>
                         </tr>
 
                         <tr>
                           <td>
-                            <span>Poznámka - číslo objednávky:</span>
+                            <span>{{ 'process5.order-number' | translate }}</span>
                             <b><strong>2017003</strong></b>
                           </td>
                         </tr>
                       </table>
                       <hr>
-                      <p class="p_small">
-                        Pokud nedodržíte platební instrukce, <br>transakce může trvat déle.
-                        Na tlačítko <b class="accentColor">“Peníze odeslány”</b> klikněte <br>
-                        až v momentu, co budou peníze <b class="redColor">opravdu odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.info-instruction' | translate">
                       </p>
 
                       <a href="#" class="btn btn-accent rippler rippler-default full-width">Money sent</a>
@@ -912,14 +910,13 @@
 
                     <!-- STEP 5-1 -->
                     <div class="step">
-                      <div class="step-title"><h3 class="h3">5. Poslání peněz - Crypto</h3></div>
+                      <div class="step-title"><h3 class="h3">5. {{ 'process5.title-crypto' | translate }}</h3></div>
 
-                      <p class="p_small">
-                        <b>Pošlete</b> částku na uvedenou <b>peněženku</b>. Dbejte na <b>potvrzení</b> odeslání až v momentu, kdy budou finance <b>skutečně odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.sub-title' | translate">
                       </p>
 
                       <div class="exchange-info">
-                        <div class="line-sides">posílaná částka</div>
+                        <div class="line-sides">{{ 'process5.amount-transfer' | translate }}</div>
 
                         <div class="select-amount">
                           <label class="input-exchange">
@@ -936,15 +933,15 @@
                           </label>
                         </div>
 
-                        <div class="line-sides">platební údaje</div>
+                        <div class="line-sides">{{ 'process5.payment-information' | translate }}</div>
                       </div>
 
 
 
                       <div class="exchange-info__descr text-center">
                         <div class="item">
-                          <span>Bitcoin QR platba:</span>
-                          <b>Naskenujte a zaplaťte</b>
+                          <span>{{ 'process5.bitcoin-qr' | translate }}</span>
+                          <b>{{ 'process5.scan-pay' | translate }}</b>
                         </div>
 
                         <div class="item">
@@ -954,22 +951,20 @@
                         </div>
 
                         <div class="item">
-                          <span>Bitcoin adresa peněženky:</span>
+                          <span>{{ 'process5.wallet-address' | translate }}</span>
                           <span><b>1GoBTCTiC8TEVoLmrGk4CQFXiVbRr7ktoz</b></span>
                         </div>
 
                         <div class="item">
-                          <span>Na platbu vám zbývá:</span>
+                          <span>{{ 'process5.time-to-pay-left' | translate }}</span>
                           <b>7 minut a 69 vteřin</b>
                         </div>
                       </div>
 
 
                       <hr>
-                      <p class="p_small">
-                        Pokud nedodržíte platební instrukce, <br>transakce může trvat déle.
-                        Na tlačítko <b class="accentColor">“Peníze odeslány”</b> klikněte <br>
-                        až v momentu, co budou peníze <b class="redColor">opravdu odeslány</b>.
+                      <p class="p_small pre-line" [innerHTML]="'process5.info-instruction' | translate">
+
                       </p>
 
                       <a href="#" class="btn btn-accent rippler rippler-default full-width">Money sent</a>
