--- a/src/app/landing-magazine/landing-magazine.component.html
+++ b/src/app/landing-magazine/landing-magazine.component.html
@@ -3,8 +3,10 @@
 
     <header class="content__header">
       <div class="title"><h1 class="h1">Become a partner</h1></div>
-      <div class="sub-title"><p class="p_large pre-line">Prozkoumejte široké možnosti partnerství
-        a zapojte se do úžasného světa kryptoměn.</p></div>
+      <div class="sub-title">
+        <p class="p_large pre-line">{{ 'become-partner.sub-head' | translate }}
+        </p>
+      </div>
     </header>
 
     <div class="main__wrapper">
@@ -17,38 +19,35 @@
               <div class="item-icons">
                 <img src="../assets/img/adv-icons1.png" alt="Staňte se doporučitelem">
               </div>
-              <div class="item-title"><span>Staňte se <br>doporučitelem</span></div>
+              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text1' | translate }}</span></div>
             </div>
 
             <div class="item">
               <div class="item-icons">
                 <img src="../assets/img/adv-icons2.png" alt="Staňte se velkoodběratele">
               </div>
-              <div class="item-title"><span>Staňte se <br>velkoodběratelem</span></div>
+              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text2' | translate }}</span></div>
             </div>
 
             <div class="item">
               <div class="item-icons">
                 <img src="../assets/img/adv-icons3.png" alt="Otevřete si směnárnu">
               </div>
-              <div class="item-title"><span>Otevřete si <br>směnárnu</span></div>
+              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text3' | translate }}</span></div>
             </div>
           </div>
 
           <div class="magazine">
             <div class="item blank-self">
               <div class="blank-self__head">
-                <h2 class="h2">Staňte se doporučitelem</h2>
+                <h2 class="h2">{{ 'become-partner.block2-title' | translate }}</h2>
               </div>
               <div class="item-info">
-                <p class="p_small">
-                  Po registraci se vám vygeneruje unikátní odkaz, který můžete poslat jako pozvánku do naší směnárny
-                  <br><br>
-                  Náš systém rozpozná, že váš partner přišel na stránku skrze váš odkaz a automaticky odešle vám přičte
-                  <br>provizi, kterou můžete vybrat na jakoukoliv peněženku.
+                <p class="p_small pre-line">
+                  {{ 'become-partner.block2-text' | translate }}
                 </p>
                 <div class="btn-wrapper">
-                  <a href="#" class="btn btn-accentSecond">vytvorit ucet</a>
+                  <a href="#" class="btn btn-accentSecond">{{ 'become-partner.block2-btn' | translate }}</a>
                 </div>
               </div>
 
@@ -59,14 +58,12 @@
 
             <div class="item blank-self item_reverse">
               <div class="blank-self__head">
-                <h2 class="h2">Staňte se velkoodběratelem Unicash nebo jiné měny <br>za zvláštní podmínky</h2>
+                <h2 class="h2">{{ 'become-partner.block3-title' | translate }}</h2>
               </div>
 
               <div class="item-info">
-                <p class="p_small">
-                  Fungujete již jako směnárna nebo burza? Zásadním úkolem směnárny i burzy je vyřešit tok financí a Unicash vám s tím díky propojení široké sítě platební služeb, může
-                  <br>pomoci.
-                  <br>Podívejte se, jak Unicash funguje a v případě zájmu o velkoobchodní ceny nás kontaktujte.
+                <p class="p_small pre-line">
+                  {{ 'become-partner.block3-text' | translate }}
                 </p>
                 <div class="btn-wrapper">
                   <a href="#" class="btn btn-accentSecond">business@smartex.info</a>
@@ -81,20 +78,12 @@
 
             <div class="item blank-self">
               <div class="blank-self__head">
-                <h2 class="h2">Otevřete vlastní směnárnu, pomůžeme vám.</h2>
+                <h2 class="h2">{{ 'become-partner.block4-title' | translate }}</h2>
               </div>
 
               <div class="item-info">
-                <p class="p_small">
-                  Každá směnárna na trhu je důležitá služba pro uživatele kryptoměn, jelikož pomáhá
-                  <br>budovat infrastrukturu a srovnávat cenovou hladinu.
-                  <br><br>
-                  Žádaná služba dnes znamená garanci zajímavého zisku.
-                  <br><br>
-                  Nabízíme možnost získat partnerskou směnárnu, která by byla naším partnerem,
-                  <br>jelikož poptávka po našich službách často převyšuje naše kapacity.
-                  <br>
-                  Přečtěte si více o partnerské směnárně zde a v případě zájmu nám napište na
+                <p class="p_small pre-line">
+                  {{ 'become-partner.block4-text' | translate }}
                 </p>
                 <div class="btn-wrapper">
                   <a href="#" class="btn btn-accentSecond">business@smartex.info</a>
