[Slava] fix перевод

--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -37,7 +37,7 @@
 
                 <div class="commission">
                   <strong class="title-great">15 USD</strong>
-                  <a href="#" class="btn btn-accent rippler rippler-default">Vybrat provizi</a>
+                  <a href="#" class="btn btn-accent rippler rippler-default">{{ 'invite-friends.select-commission' | translate }}</a>
                 </div>
 
                 <hr>
