[Slava] fix перевод

--- a/src/app/_dialog/dialog-question/dialog-question.component.html
+++ b/src/app/_dialog/dialog-question/dialog-question.component.html
@@ -5,7 +5,7 @@
 
   <div class="popup-content">
     <div class="btn-wrapper text-center">
-      <a (click)="onNoClick()" class="btn btn-border btn-border_accent rippler rippler-default">{{ 'popup-question.no' | translate }}</a>
+      <a (click)="onNoClick($event)" class="btn btn-border btn-border_accent rippler rippler-default">{{ 'popup-question.no' | translate }}</a>
       <a href="#" class="btn btn-accent rippler rippler-default">{{ 'popup-question.yes' | translate }}</a>
     </div>
   </div>
