--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,8 +1,8 @@
 
 
   <div class="main inner fadeIn animated"
-       (window:orientationchange)="initSetPage($event)"
-       (window:resize)="initSetPage($event)" >
+       (window:orientationchange)="initSetPage()"
+       (window:resize)="initSetPage()" >
     <div class="container">
 
       <header class="content__header">
