[DANIL] guard + auth

--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -35,23 +35,23 @@
       </nav>
 
       <div class="header-btn">
-        <!--<a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialogReg($event)">{{ 'header.guest-registr-btn' | translate }}</a>-->
-        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialogReg($event)">{{'header.user-transactions-btn' | translate }}</a>
-        <!--<a href="#" class="btn btn-accent rippler rippler-default" (click)="openDialogAuth($event)">{{ 'header.guest-login-btn' | translate }}</a>-->
+        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialogReg($event)">{{ 'header.guest-registr-btn' | translate }}</a>
+        <!--<a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialogReg($event)">{{'header.user-transactions-btn' | translate }}</a>-->
+        <a href="#" class="btn btn-accent rippler rippler-default" (click)="openDialogAuth($event)">{{ 'header.guest-login-btn' | translate }}</a>
 
-        <div class="dropdown">
-          <a href="#" class="btn btn-accent rippler rippler-default js-dropdown-link"><span class="dropdown-link">{{ 'header.user-login-btn' | translate }}</span></a>
-          <div class="dropdown-data">
-            <ul>
-              <li><a href="#">{{ 'header.user-dropdownlist.link1' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link2' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link3' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>
-            </ul>
-            <hr class="full-width">
-            <a href="#" class="logout">Log Out</a>
-          </div>
-        </div>
+        <!--<div class="dropdown">-->
+          <!--<a href="#" class="btn btn-accent rippler rippler-default js-dropdown-link"><span class="dropdown-link">{{ 'header.user-login-btn' | translate }}</span></a>-->
+          <!--<div class="dropdown-data">-->
+            <!--<ul>-->
+              <!--<li><a href="#">{{ 'header.user-dropdownlist.link1' | translate }}</a></li>-->
+              <!--<li><a href="#">{{ 'header.user-dropdownlist.link2' | translate }}</a></li>-->
+              <!--<li><a href="#">{{ 'header.user-dropdownlist.link3' | translate }}</a></li>-->
+              <!--<li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>-->
+            <!--</ul>-->
+            <!--<hr class="full-width">-->
+            <!--<a href="#" class="logout">Log Out</a>-->
+          <!--</div>-->
+        <!--</div>-->
       </div>
 
       <div class="header-lang">
