--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -11,7 +11,8 @@
     <label class="form-group" [ngClass]="{'has-error': userRegistrForm.controls['name'].hasError('required') && regForm.submitted}" >
       <span class="form-title">Your name:</span>
       <input [(ngModel)]="userRegistr.name" formControlName="name"  name="name" type="text" class="form-control">
-      <span *ngIf="userRegistrForm.controls['name'].hasError('required') && regForm.submitted" class="error-label">Hesla se neshodují</span>
+      <span *ngIf="userRegistrForm.controls['name'].hasError('required') && regForm.submitted" class="error-label">Required field</span>
+      <span *ngIf="userRegistrForm.controls['name'].hasError('minlength') && regForm.submitted" class="error-label">Name should contain 6 characters</span>
     </label>
 
      <label class="form-group"
@@ -22,26 +23,27 @@
             && regForm.submitted) || userRegistrForm.controls['email'].hasError('notunique') }">
       <span class="form-title">Your e-mail (account login):</span>
       <input [(ngModel)]="userRegistr.email" formControlName="email"  name="email"  type="text" class="form-control">
-       <span *ngIf="(userRegistrForm.controls['email'].hasError('required') || userRegistrForm.controls['email'].hasError('email')) && regForm.submitted" class="error-label">Hesla se neshodují</span>
-       <span *ngIf="userRegistrForm.controls['email'].hasError('notunique')" class="error-label">notunique</span>
+       <span *ngIf="(userRegistrForm.controls['email'].hasError('required') || userRegistrForm.controls['email'].hasError('email')) && regForm.submitted" class="error-label">Required field</span>
+       <span *ngIf="userRegistrForm.controls['email'].hasError('notunique')" class="error-label">User with this email already exists!</span>
     </label>
     <!--(blur)="checkEmailExist()"-->
 
     <label class="form-group"
            [ngClass]="{'has-error': (userRegistrForm.controls['password'].hasError('required')
-           || userRegistrForm.controls['password'].hasError('minLength')
+           || userRegistrForm.controls['password'].hasError('minlength')
            || userRegistrForm.controls['password'].hasError('maxLength'))
            && regForm.submitted}">
       <span class="form-title">Password:</span>
       <input [(ngModel)]="userRegistr.password" formControlName="password"  name="password" type="password" class="form-control" required="">
-      <span *ngIf="userRegistrForm.controls['password'].hasError('required') && regForm.submitted" class="error-label">Hesla se neshodují</span>
+      <span *ngIf="userRegistrForm.controls['password'].hasError('required') && regForm.submitted" class="error-label">Required field</span>
+      <span *ngIf="(userRegistrForm.controls['password'].hasError('minlength') || userRegistrForm.controls['password'].hasError('maxlength')) && regForm.submitted" class="error-label">The password must be between 6 and 64 characters</span>
     </label>
 
 
     <label class="form-group" [ngClass]="{'has-error': userRegistrForm.controls['confirmPassword'].hasError('matchOther') && regForm.submitted}">
       <span class="form-title">Password again:</span>
       <input [(ngModel)]="userRegistr.repassword" formControlName="confirmPassword" name="repassword"  type="password" class="form-control" required="">
-      <span *ngIf="userRegistrForm.controls['confirmPassword'].hasError('matchOther') && regForm.submitted" class="error-label">Heslsa se neshodují</span>
+      <span *ngIf="userRegistrForm.controls['confirmPassword'].hasError('matchOther') && regForm.submitted" class="error-label">Required field</span>
     </label>
 
     <label class="checkbox" [ngClass]="{'has-error': (userRegistrForm.controls['checkbox'].hasError('required')
