--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -94,6 +94,17 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="sweet-alert">
+                    <div class="sa-icon sa-success animate">
+                      <span class="sa-line sa-tip animateSuccessTip"></span>
+                      <span class="sa-line sa-long animateSuccessLong"></span>
+
+                      <div class="sa-placeholder"></div>
+                      <div class="sa-fix"></div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
