--- a/src/assets/sass/animations.sass
+++ b/src/assets/sass/animations.sass
@@ -56,3 +56,214 @@
   //display: inline-block
 
 
+
+
+.sweet-alert .sa-icon.sa-success
+  border-color: #a5dc86
+
+
+.sweet-alert .sa-icon
+  width: 80px
+  height: 80px
+  border: 4px solid gray
+  -webkit-border-radius: 40px
+  border-radius: 40px
+  border-radius: 50%
+  margin: 20px auto
+  padding: 0
+  position: relative
+  box-sizing: content-box
+
+
+.sweet-alert .sa-icon.sa-success::before
+  -webkit-border-radius: 120px 0 0 120px
+  border-radius: 120px 0 0 120px
+  top: -7px
+  left: -33px
+  -webkit-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+  -webkit-transform-origin: 60px 60px
+  transform-origin: 60px 60px
+
+.sweet-alert .sa-icon.sa-success::before, .sweet-alert .sa-icon.sa-success::after
+  content: ''
+  -webkit-border-radius: 40px
+  border-radius: 40px
+  border-radius: 50%
+  position: absolute
+  width: 60px
+  height: 120px
+  background: white
+  -webkit-transform: rotate(45deg)
+  transform: rotate(45deg)
+
+.sa-icon.sa-success.animate::after
+  -webkit-animation: rotatePlaceholder 4.25s ease-in
+  animation: rotatePlaceholder 4.25s ease-in
+  animation-name: rotatePlaceholder
+  animation-duration: 4.25s
+  animation-timing-function: ease-in
+  animation-delay: initial
+  animation-iteration-count: initial
+  animation-direction: initial
+  animation-fill-mode: initial
+  animation-play-state: initial
+
+
+
+.animateSuccessTip
+  animation: animateSuccessTip .75s
+
+.sweet-alert .sa-icon.sa-success .sa-line
+  height: 5px
+  background-color: #a5dc86
+  display: block
+  border-radius: 2px
+  position: absolute
+  z-index: 2
+
+
+.sweet-alert .sa-icon.sa-success .sa-line.sa-tip
+  width: 25px
+  left: 14px
+  top: 46px
+  -webkit-transform: rotate(45deg)
+  transform: rotate(45deg)
+
+.sweet-alert .sa-icon.sa-success .sa-line.sa-long
+  width: 47px
+  right: 8px
+  top: 38px
+  -webkit-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+
+.sweet-alert .sa-icon.sa-success .sa-placeholder
+  width: 80px
+  height: 80px
+  border: 4px solid rgba(165,220,134,0.2)
+  -webkit-border-radius: 40px
+  border-radius: 40px
+  border-radius: 50%
+  box-sizing: content-box
+  position: absolute
+  left: -4px
+  top: -4px
+  z-index: 2
+
+.sweet-alert .sa-icon.sa-success .sa-fix
+  width: 5px
+  height: 90px
+  background-color: white
+  position: absolute
+  left: 28px
+  top: 8px
+  z-index: 1
+  -webkit-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+
+
+.sweet-alert .sa-icon.sa-success::before
+  -webkit-border-radius: 120px 0 0 120px
+  border-radius: 120px 0 0 120px
+  top: -7px
+  left: -33px
+  -webkit-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+  -webkit-transform-origin: 60px 60px
+  transform-origin: 60px 60px
+
+.sa-icon.sa-success.animate::after
+  -webkit-animation: rotatePlaceholder 4.25s ease-in
+  animation: rotatePlaceholder 4.25s ease-in
+
+.sweet-alert .sa-icon.sa-success::after
+  -webkit-border-radius: 0 120px 120px 0
+  border-radius: 0 120px 120px 0
+  top: -11px
+  left: 30px
+  -webkit-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+  -webkit-transform-origin: 0 60px
+  transform-origin: 0 60px
+
+
+
+
+
+@keyframes animateSuccessLong
+  0%
+    width: 0
+    right: 46px
+    top: 54px
+
+  65%
+    width: 0
+    right: 46px
+    top: 54px
+
+  84%
+    width: 55px
+    right: 0
+    top: 35px
+
+  100%
+    width: 47px
+    right: 8px
+    top: 38px
+
+@keyframes animateSuccessTip
+  0%
+    width: 0
+    left: 1px
+    top: 19px
+
+  54%
+    width: 0
+    left: 1px
+    top: 19px
+
+  70%
+    width: 50px
+    left: -8px
+    top: 37px
+
+  84%
+    width: 17px
+    left: 21px
+    top: 48px
+
+  100%
+    width: 25px
+    left: 14px
+    top: 45px
+
+
+@keyframes rotatePlaceholder
+  0%
+    transform: rotate(-45deg)
+    -webkit-transform: rotate(-45deg)
+
+  5%
+    transform: rotate(-45deg)
+    -webkit-transform: rotate(-45deg)
+
+  12%
+    transform: rotate(-405deg)
+    -webkit-transform: rotate(-405deg)
+
+  100%
+    transform: rotate(-405deg)
+    -webkit-transform: rotate(-405deg)
+
+
+.animateSuccessTip
+  -webkit-animation: animateSuccessTip .75s
+  animation: animateSuccessTip .75s
+
+.animateSuccessLong
+  -webkit-animation: animateSuccessLong .75s
+  animation: animateSuccessLong .75s
+
+.sa-icon.sa-success.animate::after
+  -webkit-animation: rotatePlaceholder 4.25s ease-in
+  animation: rotatePlaceholder 4.25s ease-in
