[DANIL] измнение маин настроек пользователя

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -17,7 +17,7 @@
       <div class="main__wrapper">
         <div class="content ">
 
-          <div class="cards">
+          <div class="cards" [ngClass]="{'custom-loader disabled': loadingNews}">
 
             <div class="blank-self tape-top">
 
