--- a/src/assets/sass/_media.sass
+++ b/src/assets/sass/_media.sass
@@ -130,7 +130,7 @@
 	.inner .main__wrapper .navbars
 		display: none
 	.inner
-		
+
 		.main__wrapper
 			flex-wrap: wrap
 		&:after
@@ -209,7 +209,7 @@
 						font-size: 3.5rem
 						display: block
 						transform: none
-		.header-menu .dropdown._opened 
+		.header-menu .dropdown._opened
 			.dropdown-link
 				margin-right: 0
 				font-weight: bold
@@ -279,7 +279,7 @@
 			.header-lang
 				position: absolute
 				display: block
-	
+
 	// footer
 	.footer
 		padding: 4.5rem 0
@@ -296,7 +296,7 @@
 			margin-right: 1rem
 	.footer__content
 		margin-left: auto
-	
+
 
 	// INNER
 	.magazine .item-image, .magazine .item_reverse .item-image
@@ -580,7 +580,7 @@
 			top: 0
 			left: 0
 			width: 100%
-			height: 100vh
+			height: 100%
 			padding: 8.5rem 3rem 0
 			background-color: rgba(0,0,0,0.75)
 			z-index: 999
@@ -732,7 +732,7 @@
 	.transcations-info .line-sides
 		margin-bottom: 2.5rem
 	.gratitude
-		.h2 
+		.h2
 			white-space: normal
 			font-size: 1.8rem
 		hr
@@ -913,7 +913,7 @@
 		min-width: 11rem
 
 	.form .double .form-group:last-child
-		width: 12rem	
+		width: 12rem
 	.settings .form .form-group
 		max-width: 100%
 	.transcations-process .step
