--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1619,6 +1619,8 @@ hr
 		padding: 0 1.7rem
 		z-index: 5
 
+.upload-file__name.rtl
+  padding-right: 12.5rem
 
 .between-children
 	display: -webkit-flex
@@ -1862,6 +1864,22 @@ hr
 			border-color: $errorColor
 			&:after
 				border-color: $errorColor
+.checkbox-success
+  .checkbox-icons
+    border-color: #8EC343
+    &:after
+      border-color: #8EC343
+.rtl
+  direction: rtl
+
+
+.verified
+  display: block
+  span
+    display: block
+    width: 100%
+  &-success
+    color: #8EC343
 
 .subblock
 	&-content
