--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -49,7 +49,7 @@
               <li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>
             </ul>
             <hr class="full-width">
-            <a href="#" class="logout">Log Out</a>
+            <a href="#" (click)="btnLogout($event)" class="logout">Log Out</a>
           </div>
         </div>
       </div>
